--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@nuxtjs/tailwindcss": "^6.10.0",
 		"@pinia/nuxt": "^0.5.1",
 		"@simplewebauthn/server": "^13.1.2",
+		"date-fns": "^4.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.3.3",
 		"nodemailer": "^7.0.5",
