--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
 	"version": "1.0.0",
 	"description": "A Nuxt.js boilerplate for building passkey authentication sites",
 	"author": "Fredrik Stenbeck <fredrik@stenbecklab.com>",
-	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/stenbecklab/passkey-auth-nuxt-boilerplate.git"
+	},
+	"homepage": "https://passkey.stenbecklab.com",
 	"license": "MIT",
 	"scripts": {
 		"dev": "nuxt dev",
@@ -11,7 +15,6 @@
 		"preview": "nuxt preview"
 	},
 	"dependencies": {
-		"@nuxtjs/tailwindcss": "^6.10.0",
 		"@pinia/nuxt": "^0.5.1",
 		"@simplewebauthn/server": "^13.1.2",
 		"date-fns": "^4.1.0",
